...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Egm-vZ-sxm">
                                                    <rect key="frame" x="354" y="0.0" width="60" height="79.666666666666671"/>
                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="60" id="s3U-sg-709"/>
                                                    </constraints>
                                                    <state key="normal" title="EDIT">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="clickEditButton:" destination="1sD-Rm-kWC" eventType="touchUpInside" id="CC6-4l-ypz"/>
                                                    </connections>
                                                </button>
...
            </objects>
            <point key="canvasLocation" x="1384.8" y="390.85457271364322"/>
        </scene>
        <!--New Message-->
        <scene sceneID="cMe-dT-Ewr">
            <objects>
                <viewController title="New Message" id="B5x-4i-Tea" customClass="addMsgVC" customModule="rideTicker" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Hf0-LE-Qbh">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <viewLayoutGuide key="safeArea" id="up9-vC-OZK"/>
                    </view>
...
